--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,8 +38,6 @@
     <string name="your_main_destination">Your main destination</string>
     <string name="in_discussing_and_evaluating_films">in discussing and evaluating films</string>
     <string name="browse">browse</string>
-    <string name="arabic">Arabic</string>
-    <string name="english">English</string>
     <string name="log_in">Log in</string>
     <string name="forgot_password">Forgot Password ?</string>
     <string name="email">Email</string>
@@ -68,5 +66,11 @@
     <string name="how_can_we_help_you">How can we help you</string>
     <string name="message">Message</string>
     <string name="ayman_yahoo_com">ayman@yahoo.com</string>
+    <string name="arabic">Arabic</string>
+    <string name="english">English</string>
+    <string name="info">Info</string>
+    <string name="comments">Comments</string>
+    <string name="age">Age</string>
+    <string name="language">Language</string>
 
 </resources>
